att: corrigido erro de digitação na classe 'table-cel' e pesquisa de valores inexistentes

--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,6 +1,7 @@
 {% extends "global/base.html" %}
 
 {% block content %}
+{% if contacts %}
   <div class="responsive-table">
     <table class="contacts-table">
       <caption class="table-caption">
@@ -20,7 +21,7 @@
       <tbody>
         {% for contact in contacts %}
           <tr class="table-row">
-            <td class="table-cell">
+            <td class="table-cel">
               <a 
                 class="'table-link" 
                 href="{% url "contact:contact" contact.id %}"
@@ -28,16 +29,16 @@
                 {{contact.id}}
               </a>
             </td>
-            <td class="table-cell">
+            <td class="table-cel">
               {{contact.first_name}}
             </td>
-            <td class="table-cell">
+            <td class="table-cel">
               {{contact.last_name}}
             </td>
-            <td class="table-cell">
+            <td class="table-cel">
               {{contact.phone}}
             </td>
-            <td class="table-cell">
+            <td class="table-cel">
               {{contact.email}}
             </td>
           </tr>
@@ -45,4 +46,11 @@
       </tbody>
     </table>
   </div>
+{% else %}
+<div class="single-contact">
+  <h1 class="single-contact-name">
+    Nenhum contato encontrado.
+  </h1>
+</div>
+{% endif %}
 {% endblock content %}
