--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -12,5 +12,10 @@
     <p><b>Created Date:</b> {{ contact.created_date }} </p>
     <p><b>Description:</b> {{ contact.description }} </p>
     <p><b>Category:</b> {{ contact.category.name }} </p>
+
+    <div class="contact-links">
+      <a href="{% url "contact:update" contact.id%}">update</a>
+
+    </div>
   </div>
 {% endblock content %}
