--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -14,7 +14,14 @@
     <p><b>Category:</b> {{ contact.category.name }} </p>
 
     <div class="contact-links">
-      <a href="{% url "contact:update" contact.id %}">update</a>
+      <a class='btn btn-link' href="{% url "contact:update" contact.id %}">
+        Update
+      </a>
+
+      <form action="" method="POST">
+        {% csrf_token %}
+        <button class="btn-link btn btn-delete " type="submit">Delete</button>
+      </form>
     </div>
   </div>
 {% endblock content %}  
