--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -13,14 +13,27 @@
     <p><b>Description:</b> {{ contact.description }} </p>
     <p><b>Category:</b> {{ contact.category.name }} </p>
 
+    {% if contact.pictures %}
+      <p>
+        <img src="{{ contact.pictures.url }}" alt="{{contact.first_name}} {{contact.last_name}}">
+      </p>
+    {% endif %}
+
     <div class="contact-links">
       <a class='btn btn-link' href="{% url "contact:update" contact.id %}">
         Update
       </a>
 
-      <form action="" method="POST">
+      <form action="{% url "contact:delete" contact.id %}" method="POST">
         {% csrf_token %}
-        <button class="btn-link btn btn-delete " type="submit">Delete</button>
+
+        {% if confirmation == 'no' %}
+          <input type="hidden" name="confirmation" value="yes">
+          <button class="btn-link btn btn-delete " type="submit">Confirma?</button>
+        {% else %}
+          <button class="btn-link btn btn-delete " type="submit">Delete</button>
+        {% endif %}
+
       </form>
     </div>
   </div>
