att: mais trechos de código comentados removidos; contact.pictures renomeado para contact.picture

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -13,9 +13,9 @@
     <p><b>Description:</b> {{ contact.description }} </p>
     <p><b>Category:</b> {{ contact.category.name }} </p>
 
-    {% if contact.pictures %}
+    {% if contact.picture %}
       <p>
-        <img src="{{ contact.pictures.url }}" alt="{{contact.first_name}} {{contact.last_name}}">
+        <img src="{{ contact.picture.url }}" alt="{{contact.first_name}} {{contact.last_name}}">
       </p>
     {% endif %}
 
