--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -21,11 +21,15 @@
             {{ field.errors }}
 
             {% if field.help_text %}
-              <p class="help-text">
-                {{ field.help_text }}
-              </p>
+              <p class="help-text">{{ field.help_text }}</p>
             {% endif %}
           </div>
+
+          {% if field.name == 'picture'  and field.value.url %}
+            <div class="form-group">
+              <img src="{{ field.value.url }}" alt="">
+            </div>
+          {% endif %}
         {% endfor %}
       </div>
       
