--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -13,8 +13,8 @@
         </a>
       </li>
       <li class="menu-item">
-        <a href="" class="menu-link">
-          Link 2
+        <a href="{% url "contact:register" %}" class="menu-link">
+          User Create
         </a>
       </li>
     </ul>
