att: form para atualizar dados e links(temporários): User Create e User Update

--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -17,6 +17,11 @@
           User Create
         </a>
       </li>
+      <li class="menu-item">
+        <a href="{% url "contact:user_update" %}" class="menu-link">
+          User Update
+        </a>
+      </li>
     </ul>
   </nav>
 
